修复升级执行命令语句API；同步App运行、打包和构建中的app版本号